# api/src/app.ts
@@ -4,7 +4,8 @@ import { fail } from "./middleware/fail.ts";
 import { bookNotes } from "./routes/bookNotes.ts";
 import { bookProgress } from "./routes/bookProgress.ts";
 import { books } from "./routes/books.ts";
-import { dashboard } from "./routes/dashboard.ts";
+import { notes } from "./routes/notes.ts";
+import { stats } from "./routes/stats.ts";
 
 export const openApiInfo = {
   openapi: "3.1.0" as const,
@@ -25,6 +26,7 @@ app.use(delay);
 app.route("/", books);
 app.route("/", bookNotes);
 app.route("/", bookProgress);
-app.route("/", dashboard);
+app.route("/", stats);
+app.route("/", notes);
 
 app.doc31("/doc", openApiInfo);
